--- a/style.css
+++ b/style.css
@@ -17,7 +17,12 @@ header {
     color: #989D9C;
     cursor: pointer;
     margin-right: 23px;
-    
+    text-decoration: none;
+
+}
+.link-header:hover{
+    opacity: 0.5;
+    transition: 0.5s;
 }
 
 
@@ -34,6 +39,12 @@ header {
     color: #FFFFFF;
     cursor: pointer;
 }
+
+.button-header:hover{
+    opacity: 0.5;
+    transition: 0.5s;
+}
+
 
 
 .logo-image {
@@ -56,13 +67,13 @@ h1 {
 }
 
 h2 {
-    font-weight:500;
+    font-weight: 500;
     font-Size: 58px;
     Line-height: 71px;
     color: #515151;
 }
 
-p{
+p {
     font-weight: 400;
     font-size: 24px;
     line-height: 29px;
@@ -73,7 +84,7 @@ p{
 }
 
 
-.button-main{
+.button-main {
     background: #ADFF00;
     border-radius: 30.5px;
     width: 239px;
@@ -86,34 +97,55 @@ p{
     color: #000000;
 }
 
+.button-main:hover{
+    opacity: 0.5;
+    transition: 0.5s ease-in-out;
+}
 
-@media screen and (max-width:900px) {
-    a{
+
+@media screen and (max-width:1200px) {
+
+    header {
+        margin: 29px 16px
+    }
+
+    .link-header{
+        font-size: 15px;
+        margin-right: 8px;
+        cursor:pointer;
+    }
+
+    .button-header{
+        position:relative ;
+        font-size: 15px;
+        margin: 25px 109px;
+
+    }
+
+    p {
         display: none;
     }
-    .button-header{
-        left: 400px;
-        position: relative;
-        font-size: 34px;
+
+    .logo-image {
+        width: 100%;
+        height: 100%;
+        margin: 21px 0;
+    }
+    h1{
+        font-size: 50px;
     }
 
-    .button-header:hover{
-        opacity: 1.5 ;
+    h2{
+        font-size:30px;
+        margin-bottom: 19px;
     }
 
     section{
-        text-align: center;
-        margin: 80px;
-    }
-    
-    img{
-        display: block;
-        margin-left: 35px;
-
+        margin-left: 55px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
 
-    p{
-        color: #848484;
-        font-weight: 900;
-    }
 }
